# masterror

./: .gitignore  .rultor.yml  .rustfmt.toml  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.ko.md  README.md  README.ru.md  README.template.md  REQUIREMENTS.md  REUSE.toml  SECURITY.md  WHY_MIGRATE.md  build.rs  cliff.toml  codecov.yml  deny.toml  idea.md  rust-toolchain.toml  target.md  tip2.md
examples/axum-rest-api/: Cargo.toml  README.md
examples/axum-rest-api/src/: lib.rs  main.rs
examples/axum-rest-api/tests/: integration_tests.rs
examples/basic-async/: Cargo.toml  README.md
examples/basic-async/src/: main.rs
examples/cli-test-errors/: Cargo.toml
examples/cli-test-errors/.cargo/: config.toml
examples/cli-test-errors/src/: main.rs
examples/custom-domain-errors/: Cargo.toml  README.md
examples/custom-domain-errors/src/: main.rs
examples/sqlx-database/: Cargo.toml  README.md
examples/sqlx-database/src/: main.rs
masterror-cli/: Cargo.toml  README.md
masterror-cli/src/: commands.rs  config.rs  error.rs  errors.rs  knowledge.rs  locale.rs  main.rs  options.rs  output.rs  parser.rs  sections.rs
masterror-cli/src/commands/: check.rs  explain.rs  init.rs  list.rs  mod.rs  practice.rs
masterror-cli/src/errors/: raprogramm.rs  resolution.rs  traits.rs
masterror-cli/src/errors/borrowing/: e0508.rs
masterror-cli/src/errors/lifetimes/: e0597.rs  e0621.rs
masterror-cli/src/errors/raprogramm/: ra007.rs  ra009.rs
masterror-cli/src/locale/: en.rs  ko.rs  ru.rs
masterror-cli/src/sections/: fix.rs  link.rs  translation.rs  why.rs
masterror-derive/: Cargo.toml  README.md
masterror-derive/src/: app_error_impl.rs  display.rs  error_trait.rs  from_impl.rs  input.rs  lib.rs  lint.rs  masterror_impl.rs  span.rs  template_support.rs
masterror-derive/src/display/: enum_impl.rs  format_args.rs  formatter.rs  placeholder.rs  projection.rs  struct_impl.rs  template.rs
masterror-derive/src/error_trait/: backtrace.rs  binding.rs  provide.rs  source.rs
masterror-derive/src/input/: parse.rs  parse_attr.rs  parse_format.rs  types.rs  utils.rs
masterror-derive/src/masterror_impl/: attachment.rs  binding.rs  conversion.rs  mapping.rs
masterror-knowledge/: Cargo.toml  README.md
masterror-knowledge/src/: errors.rs  lib.rs
masterror-knowledge/src/errors/: abi.rs  attributes.rs  borrowing.rs  const_eval.rs  consts.rs  generics.rs  lifetimes.rs  linking.rs  mod.rs  ownership.rs  patterns.rs  raprogramm.rs  resolution.rs  simd.rs  structs.rs  syntax.rs  traits.rs  types.rs  unsafe_code.rs  visibility.rs
masterror-knowledge/src/errors/abi/: e0044.rs  e0045.rs  e0060.rs  e0130.rs
masterror-knowledge/src/errors/async/: e0706.rs  e0708.rs  e0727.rs  e0728.rs  e0733.rs  e0744.rs  e0752.rs  e0760.rs
masterror-knowledge/src/errors/attributes/: e0452.rs  e0453.rs  e0454.rs  e0455.rs  e0457.rs  e0458.rs  e0459.rs  e0466.rs  e0468.rs  e0469.rs  e0517.rs  e0518.rs  e0522.rs  e0536.rs  e0537.rs  e0538.rs  e0539.rs  e0541.rs  e0552.rs  e0554.rs  e0556.rs  e0557.rs  e0565.rs  e0566.rs  e0587.rs  e0588.rs  e0589.rs  e0701.rs  e0710.rs  e0714.rs  e0715.rs  e0722.rs  e0725.rs  e0734.rs  e0736.rs  e0774.rs  e0777.rs  e0778.rs  e0779.rs  e0780.rs  (+2 more)
masterror-knowledge/src/errors/borrowing/: e0499.rs  e0500.rs  e0501.rs  e0502.rs  e0503.rs  e0504.rs  e0506.rs  e0508.rs  e0510.rs  e0521.rs  e0524.rs  e0594.rs  e0596.rs
masterror-knowledge/src/errors/const_eval/: e0492.rs  e0493.rs
masterror-knowledge/src/errors/consts/: e0010.rs  e0015.rs  e0080.rs
masterror-knowledge/src/errors/features/: e0635.rs  e0636.rs  e0658.rs  mod.rs
masterror-knowledge/src/errors/generics/: e0107.rs  e0109.rs  e0128.rs  e0393.rs  e0401.rs  e0403.rs
masterror-knowledge/src/errors/lifetimes/: e0106.rs  e0195.rs  e0226.rs  e0227.rs  e0228.rs  e0261.rs  e0262.rs  e0263.rs  e0309.rs  e0310.rs  e0311.rs  e0316.rs  e0478.rs  e0482.rs  e0491.rs  e0495.rs  e0496.rs  e0515.rs  e0581.rs  e0582.rs  e0623.rs  e0625.rs  e0626.rs  e0637.rs  e0657.rs  e0700.rs  e0716.rs  e0803.rs
masterror-knowledge/src/errors/linking/: e0460.rs  e0461.rs  e0462.rs  e0463.rs  e0464.rs
masterror-knowledge/src/errors/ownership/: e0373.rs  e0381.rs  e0382.rs  e0383.rs  e0384.rs  e0505.rs  e0507.rs  e0509.rs
masterror-knowledge/src/errors/patterns/: e0004.rs  e0005.rs  e0023.rs  e0025.rs  e0026.rs  e0027.rs  e0029.rs  e0030.rs  e0033.rs  e0158.rs  e0164.rs  e0170.rs
masterror-knowledge/src/errors/raprogramm/: ra001.rs  ra002.rs  ra003.rs  ra004.rs  ra005.rs  ra006.rs  ra008.rs  ra010.rs  ra011.rs  ra012.rs  ra013.rs  ra014.rs  ra015.rs  ra016.rs  ra017.rs  ra018.rs  ra019.rs  ra020.rs  ra021.rs
masterror-knowledge/src/errors/resolution/: e0251.rs  e0252.rs  e0253.rs  e0254.rs  e0255.rs  e0256.rs  e0259.rs  e0260.rs  e0411.rs  e0412.rs  e0422.rs  e0423.rs  e0424.rs  e0425.rs  e0426.rs  e0428.rs  e0429.rs  e0430.rs  e0431.rs  e0432.rs  e0433.rs  e0434.rs  e0435.rs  e0436.rs  e0530.rs  e0531.rs  e0532.rs  e0533.rs  e0577.rs  e0583.rs  e0601.rs  e0602.rs  e0603.rs  e0615.rs  e0616.rs  e0624.rs  e0659.rs
masterror-knowledge/src/errors/simd/: e0075.rs  e0076.rs  e0077.rs
masterror-knowledge/src/errors/structs/: e0124.rs
masterror-knowledge/src/errors/syntax/: e0062.rs  e0063.rs  e0067.rs  e0081.rs  e0084.rs  e0091.rs  e0121.rs  e0124.rs  e0128.rs  e0131.rs  e0133.rs  e0152.rs  e0178.rs  e0229.rs  e0230.rs  e0231.rs  e0232.rs  e0264.rs  e0267.rs  e0268.rs  e0297.rs  e0408.rs  e0409.rs  e0415.rs  e0416.rs  e0519.rs  e0569.rs  e0571.rs  e0572.rs  e0579.rs  e0580.rs  e0586.rs  e0590.rs  e0627.rs  e0628.rs  e0634.rs  e0646.rs  e0648.rs  e0670.rs  e0695.rs  (+12 more)
masterror-knowledge/src/errors/traits/: e0034.rs  e0038.rs  e0040.rs  e0046.rs  e0049.rs  e0050.rs  e0053.rs  e0116.rs  e0117.rs  e0118.rs  (+60 more)
masterror-knowledge/src/i18n/: messages.rs  mod.rs  phrases.rs
masterror-rustc/: Cargo.toml
masterror-rustc/src/: main.rs
masterror-template/: Cargo.toml  README.md
masterror-template/src/: lib.rs  template.rs
masterror-template/src/template/: parser.rs
(+348 files in other folders)
