[package]
name = "masterror"
version = "0.24.6"
rust-version = "1.90"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RAprogramm/masterror"
readme = "README.md"
description = "Application error types and response mapping"
documentation = "https://docs.rs/masterror"
build = "build.rs"
categories = ["rust-patterns", "web-programming"]
keywords = ["error", "api", "framework"]
include = [
  "Cargo.toml",
  "Cargo.lock",
  "build.rs",
  "src/**",
  "tests/**",
  "README.md",
  "README.ru.md",
  "README.template.md",
  "CHANGELOG.md",
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "Makefile.toml",
  "deny.toml",
  "idea.md",
  "target.md",
  "build/**",
  "masterror-derive/**",
  "masterror-template/**",
  ".cargo/audit.toml",
  ".cargo/config.toml",
]

[workspace]
members = ["masterror-derive", "masterror-template"]

resolver = "3"

# Defaults for members (root объявлен строками выше, потому что build.rs парсит его как строки)
[workspace.package]
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RAprogramm/masterror"
readme = "README.md"


[features]
default = ["std"]
std = ["uuid/std", "serde/std"]
tracing = ["dep:tracing", "dep:log", "dep:log-mdc", "std"]
metrics = ["dep:metrics", "std"]
backtrace = ["std"]
axum = ["dep:axum", "dep:serde_json", "std"]
actix = ["dep:actix-web", "dep:serde_json", "std"]

# Разделили: лёгкая обработка ошибок (sqlx-core) и опциональные миграции (полный sqlx)
sqlx = ["dep:sqlx-core"]    # maps sqlx_core::Error
sqlx-migrate = ["dep:sqlx"] # maps sqlx::migrate::MigrateError

redis = ["dep:redis", "std"]
validator = ["dep:validator", "std"]
serde_json = ["dep:serde_json", "std"]
config = ["dep:config", "std"]
multipart = ["axum", "std"]
tokio = ["dep:tokio", "std"]
reqwest = ["dep:reqwest", "std"]
teloxide = ["dep:teloxide-core", "std"]
telegram-webapp-sdk = ["dep:telegram-webapp-sdk", "std"]
frontend = ["dep:wasm-bindgen", "dep:js-sys", "dep:serde-wasm-bindgen", "std"]
turnkey = ["std"]
tonic = ["dep:tonic", "std"]
openapi = ["dep:utoipa", "std"]

[workspace.dependencies]
masterror-derive = { version = "0.9.0" }
masterror-template = { version = "0.3.6" }

[dependencies]
masterror-derive = { version = "0.9" }
masterror-template = { workspace = true }
tracing = { version = "0.1", optional = true, default-features = false, features = [
  "attributes",
  "std",
] }
log = { version = "0.4", optional = true }
log-mdc = { version = "0.1", optional = true }
metrics = { version = "0.24", optional = true }

serde = { version = "1", default-features = false, features = [
  "derive",
  "alloc",
] }
serde_json = { version = "1", optional = true, default-features = false, features = [
  "std",
] }
http = "1"
sha2 = "0.10"
itoa = "1"
ryu = "1"

# optional integrations
axum = { version = "0.8", optional = true, default-features = false, features = [
  "json",
  "multipart",
] }
actix-web = { version = "4", optional = true, default-features = false, features = [
  "macros",
] }

# Lean core only; no drivers, no TLS, no macros
sqlx-core = { version = "0.8", optional = true, default-features = false }
# Full sqlx ONLY for migrate mapping; still no default features
sqlx = { version = "0.8", optional = true, default-features = false, features = [
  "migrate",
] }

redis = { version = "0.32", optional = true, default-features = false }
validator = { version = "0.20", optional = true, features = ["derive"] }
config = { version = "0.15", optional = true }
utoipa = { version = "5.4", optional = true }
tokio = { version = "1", optional = true, features = ["time"] }
reqwest = { version = "0.12", optional = true, default-features = false }
teloxide-core = { version = "0.13", optional = true, default-features = false }
telegram-webapp-sdk = { version = "0.2", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
uuid = { version = "1", default-features = false }
tonic = { version = "0.14", optional = true }

[dev-dependencies]
anyhow = { version = "1", default-features = false, features = ["std"] }
criterion = "0.7"
serde_json = "1"
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "net",
  "time",
], default-features = false }
trybuild = "1"
toml = "0.9"
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["registry"] }

[[bench]]
name = "error_paths"
harness = false

[build-dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.9"

[package.metadata.masterror.readme]
feature_order = [
  "std",
  "axum",
  "actix",
  "openapi",
  "serde_json",
  "tracing",
  "metrics",
  "backtrace",
  "sqlx",
  "sqlx-migrate",
  "reqwest",
  "redis",
  "validator",
  "config",
  "tokio",
  "multipart",
  "teloxide",
  "telegram-webapp-sdk",
  "tonic",
  "frontend",
  "turnkey",
]
feature_snippet_group = 4
conversion_lines = [
  "`std::io::Error` → Internal",
  "`String` → BadRequest",
  "`sqlx::Error` → NotFound/Database",
  "`redis::RedisError` → Cache",
  "`reqwest::Error` → Timeout/Network/ExternalApi",
  "`axum::extract::multipart::MultipartError` → BadRequest",
  "`validator::ValidationErrors` → Validation",
  "`config::ConfigError` → Config",
  "`tokio::time::error::Elapsed` → Timeout",
  "`teloxide_core::RequestError` → RateLimited/Network/ExternalApi/Deserialization/Internal",
  "`telegram_webapp_sdk::utils::validate_init_data::ValidationError` → TelegramAuth",
]

[package.metadata.masterror.readme.features.axum]
description = "IntoResponse integration with structured JSON bodies"

[package.metadata.masterror.readme.features.actix]
description = "Actix Web ResponseError and Responder implementations"

[package.metadata.masterror.readme.features.std]
description = "Enable std support (default); required for runtime integrations"

[package.metadata.masterror.readme.features.openapi]
description = "Generate utoipa OpenAPI schema for ErrorResponse"

[package.metadata.masterror.readme.features.serde_json]
description = "Attach structured JSON details to AppError"

[package.metadata.masterror.readme.features.tracing]
description = "Emit structured tracing events when errors are constructed"

[package.metadata.masterror.readme.features.metrics]
description = "Increment `error_total{code,category}` counter for each AppError"

[package.metadata.masterror.readme.features.backtrace]
description = "Capture lazy `Backtrace` snapshots when telemetry is flushed"

[package.metadata.masterror.readme.features.sqlx]
description = "Classify sqlx_core::Error variants into AppError kinds"

[package.metadata.masterror.readme.features.sqlx-migrate]
description = "Map sqlx::migrate::MigrateError into AppError (Database)"

[package.metadata.masterror.readme.features.reqwest]
description = "Classify reqwest::Error as timeout/network/external API"

[package.metadata.masterror.readme.features.redis]
description = "Map redis::RedisError into cache-aware AppError"

[package.metadata.masterror.readme.features.validator]
description = "Convert validator::ValidationErrors into validation failures"

[package.metadata.masterror.readme.features.config]
description = "Propagate config::ConfigError as configuration issues"

[package.metadata.masterror.readme.features.multipart]
description = "Handle axum multipart extraction errors"

[package.metadata.masterror.readme.features.tokio]
description = "Classify tokio::time::error::Elapsed as timeout"

[package.metadata.masterror.readme.features.teloxide]
description = "Convert teloxide_core::RequestError into domain errors"

[package.metadata.masterror.readme.features."telegram-webapp-sdk"]
description = "Surface Telegram WebApp validation failures"

[package.metadata.masterror.readme.features.tonic]
description = "Convert AppError into tonic::Status with redaction"

[package.metadata.masterror.readme.features.frontend]
description = "Log to the browser console and convert to JsValue on WASM"

[package.metadata.masterror.readme.features.turnkey]
description = "Ship Turnkey-specific error taxonomy and conversions"

[lib]
crate-type = ["cdylib", "rlib"]
