# SPDX-FileCopyrightText: 2025-2026 RAprogramm <andrey.rozanov.vl@gmail.com>
#
# SPDX-License-Identifier: MIT

[package]
name = "masterror-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "CLI tool for explaining Rust compiler errors in human-friendly language"
keywords = ["rust", "compiler", "errors", "explain", "learning"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "masterror"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "env", "wrap_help"] }

# Colored output
owo-colors = { version = "4", features = ["supports-colors"] }

# JSON parsing (cargo output)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
