# SPDX-FileCopyrightText: 2025-2026 RAprogramm <andrey.rozanov.vl@gmail.com>
#
# SPDX-License-Identifier: MIT

[package]
name = "masterror-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for explaining Rust compiler errors in human-friendly language"
keywords = ["rust", "compiler", "errors", "explain", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "masterror"
path = "src/main.rs"

[[bin]]
name = "cargo-masterror"
path = "src/main.rs"

[features]
default = ["show-why", "show-fix", "show-link", "show-translation"]

# Display sections
show-why = []
show-fix = []
show-link = []
show-translation = []

# Show original compiler output before masterror block
show-original = []

[dependencies]
masterror-knowledge = { version = "0.1", path = "../masterror-knowledge" }

# CLI framework
clap = { version = "4", features = ["derive", "env", "wrap_help"] }

# Colored output
owo-colors = { version = "4", features = ["supports-colors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# Config paths
dirs = "6"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
