[package]
name = "masterror-derive"
rust-version = "1.90"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
masterror-template = { path = "../masterror-template", version = "0.1.1" }
