[package]
name = "masterror-derive"
rust-version = "1.90"
version = "0.6.2"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RAprogramm/masterror"
readme = "README.md"
description = "Derive macros for masterror"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
masterror-template = { workspace = true }
