# SPDX-FileCopyrightText: 2025 RAprogramm <andrey.rozanov.vl@gmail.com>
#
# SPDX-License-Identifier: MIT

[package]
name = "masterror-derive"
rust-version = "1.90"
version = "0.10.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/RAprogramm/masterror"
readme = "README.md"
description = "Derive macros for masterror"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
masterror-template = { workspace = true }
