# SPDX-FileCopyrightText: 2025-2026 RAprogramm <andrey.rozanov.vl@gmail.com>
#
# SPDX-License-Identifier: MIT

[package]
name = "masterror-knowledge"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Knowledge base for Rust compiler errors and best practices"
keywords = ["rust", "compiler", "errors", "explain", "learning"]
categories = ["development-tools", "command-line-utilities"]

[features]
default = ["lang-ru", "lang-ko"]

# Languages
lang-ru = []
lang-ko = []

[dependencies]
arrayvec = "0.7"
aho-corasick = "1"
