# SPDX-FileCopyrightText: 2025-2026 RAprogramm <andrey.rozanov.vl@gmail.com>
#
# SPDX-License-Identifier: MIT

[package]
name = "masterror-rustc"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "RUSTC_WRAPPER that adds translated explanations to Rust compiler errors"
keywords = ["rust", "compiler", "errors", "translation", "rustc"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "masterror-rustc"
path = "src/main.rs"

[dependencies]
masterror-knowledge = { version = "0.1", path = "../masterror-knowledge", features = ["lang-ru", "lang-ko"] }
owo-colors = { version = "4", features = ["supports-colors"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }
