# SPDX-FileCopyrightText: 2025 RAprogramm <andrey.rozanov.vl@gmail.com>
#
# SPDX-License-Identifier: MIT

[package]
name = "masterror-template"
version = "0.3.8"
rust-version = "1.90"
edition = "2024"
repository = "https://github.com/RAprogramm/masterror"
readme = "README.md"
description = "Template utilities for masterror and its derive macros"
license = "MIT OR Apache-2.0"

[dependencies]
