# SPDX-FileCopyrightText: 2025 RAprogramm <andrey.rozanov.vl@gmail.com>
#
# SPDX-License-Identifier: MIT

[package]
name = "masterror-template"
version = "0.4.0"
rust-version = "1.92"
edition = "2024"
repository = "https://github.com/RAprogramm/masterror"
readme = "README.md"
description = "Template utilities for masterror and its derive macros"
license = "MIT"

[dependencies]
