# SPDX-FileCopyrightText: 2025 RAprogramm <andrey.rozanov.vl@gmail.com>
#
# SPDX-License-Identifier: MIT

[package]
name = "basic-async"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
masterror = { path = "../..", features = ["tokio"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
