# SPDX-FileCopyrightText: 2025 RAprogramm <andrey.rozanov.vl@gmail.com>
#
# SPDX-License-Identifier: MIT

[package]
name = "custom-domain-errors"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
masterror = { path = "../..", features = ["tracing"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2.0"
